refactor(core): streamline and optimize codebase
- Replaced repetitive constructs with more concise alternative syntax using `switch` expressions.
- Simplified variable initialization and removed redundant assignments.
- Improved formatting and corrected inconsistent usage of characters in string methods.
- Enhanced utility methods for better readability and maintainability.
- Applied cleaner exception handling by removing unnecessary catches.
- Migrated to updated method variants for better clarity and performance.
- Eliminated unnecessary imports and consolidated utility calls to a common pattern.

Signed-off-by: Balázs Szücs <bszucs1209@gmail.com>