@@ -95,9 +95,6 @@ public class AuditUtils {
         }
 
         HttpServletRequest req = attrs.getRequest();
-        if (req == null) {
-            return; // No request available
-        }
 
         // STANDARD level HTTP data
         if (auditLevel.includes(AuditLevel.STANDARD)) {
@@ -143,7 +140,7 @@ public class AuditUtils {
                     Arrays.stream(joinPoint.getArgs())
                             .filter(a -> a instanceof MultipartFile)
                             .map(a -> (MultipartFile) a)
-                            .collect(Collectors.toList());
+                            .toList();
 
             if (!files.isEmpty()) {
                 List<Map<String, Object>> fileInfos =
